<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity"
    android:padding="20dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="200dp"
            android:layout_height="300dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:src="@color/light_blue_a400"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/card_view"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textColor="@color/blue_grey_700"
            tools:text="@string/lorem_ipsum"
            android:gravity="center"
            android:maxLines="2"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/text_view_genres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:textColor="@color/blue_grey_400"
            tools:text="@string/lorem_ipsum"
            android:gravity="center"
            android:maxLines="2"
            android:ellipsize="end"/>

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/text_view_genres"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                android:layout_marginHorizontal="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@color/blue_grey_50"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_baseline_date_range_grey_24"/>

                    <TextView
                        android:id="@+id/text_view_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        tools:text="@string/test"
                        android:textSize="14sp"
                        android:textColor="@color/blue_grey_700"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                android:layout_marginHorizontal="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@color/blue_grey_50"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_round_star_rate_grey_24"/>

                    <TextView
                        android:id="@+id/text_view_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        tools:text="@string/test"
                        android:textSize="14sp"
                        android:textColor="@color/blue_grey_700"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                android:layout_marginHorizontal="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@color/blue_grey_50"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_round_timelapse_grey_24"/>

                    <TextView
                        android:id="@+id/text_view_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        tools:text="@string/test"
                        android:textSize="14sp"
                        android:textColor="@color/blue_grey_700"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_action_button_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                app:srcCompat="@drawable/ic_baseline_favorite_white_24"
                android:backgroundTint="@color/red_a700"
                app:borderWidth="0dp"
                app:elevation="0dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            app:layout_constraintTop_toBottomOf="@id/linear_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textColor="@color/blue_grey_700"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_view_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linear_layout"
            android:layout_marginTop="50dp"
            android:textSize="14sp"
            tools:text="@string/lorem_ipsum"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>