<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/goToFavoriteActivity"
        android:icon="@drawable/ic_baseline_favorite_white_24"
        android:title="@string/go_to_favorite_page"
        app:showAsAction="always"
        android:orderInCategory="0" />
</menu>